[project]
name = "ComfyUI-OnDemand-Loaders.git"
description = "Suite of custom nodes that allows you to download and apply various models directly from Civitai or HuggingFace. It simplifies your workflow by managing model downloads automatically, so you don't have to manually download files and place them in the correct folders."
version = "1.0.7"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["requests"]

[project.urls]
Repository = "https://github.com/francarl/ComfyUI-OnDemand-Loaders"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/francarl/ComfyUI-OnDemand-Loaders/wiki"
"Bug Tracker" = "https://github.com/francarl/ComfyUI-OnDemand-Loaders/issues"

[tool.comfy]
PublisherId = "franc"
DisplayName = "ComfyUI-OnDemand-Loaders"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

